# JustACppLogger

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  logger.h
CppLogger/: logger.h
app/: CMakeLists.txt  app.cpp
cmake/: CompilerWarnings.cmake
include/CppLogger/: logger.h
include/ProjectName/: project_name.h
script/: build.bat  build.sh
src/: CMakeLists.txt  src.cpp
